Applied z-index to aniation container to fix form

--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ body, html {
     background-color: transparent;
     opacity: 0;
     position: fixed;
+    z-index: -1;
 }
 
 #animation-container-2 {
@@ -69,6 +70,7 @@ body, html {
     filter: blur(4px);
     opacity: 0;
     position: fixed;
+    z-index: -1;
 }
 
 #animation-text-container {
@@ -86,6 +88,7 @@ body, html {
     opacity: 0;
     padding: 2vw;
     position: fixed;
+    z-index: -1;
 }
 
 #animation-text-container > h1 {
@@ -568,7 +571,7 @@ textarea {
         height: 100vh;
     }
     #animation-container-2 {
-        background-size: 60%;
+        background-size: 100%;
         width: 80vw;
         height: 80vh;
     }
